crates/cox-tui/tests/snapshots/cells__card_error_unfolded.snap
---
source: crates/cox-tui/tests/cells.rs
expression: rendered
---
⚙ bash seq 20 && exit 1 · 8ms · exit 1
│ 1
│ 2
│ 3
│ 4
│ 5
│ 6
│ 7
│ 8
│ 9
│ 10
│ 11
│ 12
│ 13
│ 14
│ 15
│ 16
│ 17
│ 18
│ 19
│ 20
│ [exit 1 in 8ms]
│ ✗ 0B 8ms
