crates/cox-tui/tests/snapshots/cells__card_pending.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "text(&s, tool_cell(&s))"
---
⚙ bash sleep 5
⠧ 0.7s
