crates/cox-tui/tests/snapshots/cells__cell_assistant_renders_markdown_wrapped.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "text(&s, cell(&s, |c| matches!(c, Cell::Assistant { .. })))"
---
## The loop

Each turn is Submission in, events out. Steps:

1. assemble context
2. call the provider

fn main() {}

stage   owner
──────  ────────
turn    cox-core
render  cox-tui

A long sentence that runs well past the sixty columns this
transcript is rendered at so it has to wrap.
