crates/cox-tui/tests/snapshots/cells__cell_notice_error_and_summary.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "rest.join(\"\\n\")"
---
[info] hook `fmt` ran
[warn] skill `deploy` skipped: bad frontmatter
[budget] 80% of the session budget spent
✗ budget exceeded: spent $5.00 of $5.00
— compacted; earlier turns summarised as —
  Earlier: the user asked for the loop; main.rs was read.
