crates/cox-tui/tests/snapshots/cells__cell_task_message_labels_the_speaker_and_direction.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "format!(\"{says}\\n---\\n{delivered}\")"
---
explore: find the flaky test says: found it: flaky_sleep in
tests/shell.rs
---
→ explore: find the flaky test: keep looking
