crates/cox-tui/tests/snapshots/cells__cell_thinking_collapses_until_ctrl_t.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "format!(\"{collapsed}\\n---\\n{expanded}\")"
---
∴ thought (~24 tokens · Ctrl+T)
---
∴ The user wants the turn loop explained. Read src/main.rs
first, then summarise the state machine.
