crates/cox-tui/tests/snapshots/cells__cell_tool_running_shows_spinner_and_elapsed.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "text(&s,\ncell(&s, |c| matches!(c, Cell::Tool { call, .. } if call.name == \"bash\")))"
---
⚙ bash sleep 30
⠧ 1.4s
