crates/cox-tui/tests/snapshots/cells__cell_user_lists_attachments.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "text(&s, cell(&s, |c| matches!(c, Cell::User { .. })))"
---
› explain the loop and read main
  📎 notes.txt
