crates/cox-tui/tests/snapshots/cells__dockerfile_read_is_highlighted.snap
---
source: crates/cox-tui/tests/cells.rs
expression: "text(&s, tool_cell(&s))"
---
⚙ read Dockerfile · 8ms
│ FROM rust:latest
│ RUN apt-get update
│ COPY . /app
│ WORKDIR /app
│ RUN cargo build
│ ✓ 0B 8ms
