crates/cox-tui/tests/snapshots/cells__table_falls_back_to_records_at_50_columns.snap
---
source: crates/cox-tui/tests/cells.rs
expression: render(50)
---
crate: cox-core
owns: the agent loop as a state machine
depends on: cox-protocol

crate: cox-tui
owns: the ratatui app in TEA form
depends on: cox-core, cox-protocol
